testdata/baselines/reference/submodule/compiler/instanceofOperator.errors.txt
instanceofOperator.ts(12,5): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperator.ts(19,5): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
instanceofOperator.ts(21,5): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.


==== instanceofOperator.ts (3 errors) ====
    // Spec:
    // The instanceof operator requires the left operand to be of type Any or an object type, and the right 
    // operand to be of type Any or a subtype of the ‘Function’ interface type. The result is always of the 
    // Boolean primitive type.
    
    module test {
        class Object { }
        var obj: Object;
    
    
    
        4 instanceof null;
        ~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    
        // Error and should be error
        obj instanceof 4;
        Object instanceof obj;
    
        // Error on left hand side
        null instanceof null;
        ~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
        obj instanceof Object;
        undefined instanceof undefined;
        ~~~~~~~~~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    }
    
    